--- a/GraphicsProgrammingSolution/OpenGL-Glfw/OpenGL-Glfw.vcxproj
+++ b/GraphicsProgrammingSolution/OpenGL-Glfw/OpenGL-Glfw.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(SolutionDir)Middleware\glfw\include;$(IncludePath)</IncludePath>
     <CodeAnalysisRuleSet>C:\Program Files (x86)\Microsoft Visual Studio 14.0\Team Tools\Static Analysis Tools\Rule Sets\NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -81,7 +81,7 @@
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(ProjectDir);$(SolutionDir)Middleware\soil\include;$(SolutionDir)Middleware\glm;$(SolutionDir)Middleware\glfw\include;$(SolutionDir)Middleware\assimp\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG;_DEBUG;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <EnablePREfast>true</EnablePREfast>
+      <EnablePREfast>false</EnablePREfast>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -154,7 +154,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Demos\Texture\CubemapDemo.cpp" />
+    <ClCompile Include="Demos\Texture\ReflectionDemo.cpp" />
     <ClCompile Include="Demos\Texture\AlphaMapDemo.cpp" />
     <ClCompile Include="Demos\Light\ADSHalfwayVecDemo.cpp" />
     <ClCompile Include="Demos\Light\CartoonShadingDemo.cpp" />
@@ -175,6 +175,7 @@
     <ClCompile Include="Demos\Light\MultiLightDemo.cpp" />
     <ClCompile Include="Demos\Texture\MultiTextureDemo.cpp" />
     <ClCompile Include="Demos\Texture\NormalMapDemo.cpp" />
+    <ClCompile Include="Demos\Texture\RefractionDemo.cpp" />
     <ClCompile Include="Rendering\Renderable.cpp" />
     <ClCompile Include="Rendering\GLRenderer.cpp" />
     <ClCompile Include="GL\gl_core_4_5.c" />
@@ -196,7 +197,7 @@
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Demos\Texture\CubemapDemo.h" />
+    <ClInclude Include="Demos\Texture\ReflectionDemo.h" />
     <ClInclude Include="Demos\Texture\AlphaMapDemo.h" />
     <ClInclude Include="Demos\Light\ADSHalfwayVecDemo.h" />
     <ClInclude Include="Demos\Light\CartoonShadingDemo.h" />
@@ -219,6 +220,7 @@
     <ClInclude Include="Demos\Light\MultiLightDemo.h" />
     <ClInclude Include="Demos\Texture\MultiTextureDemo.h" />
     <ClInclude Include="Demos\Texture\NormalMapDemo.h" />
+    <ClInclude Include="Demos\Texture\RefractionDemo.h" />
     <ClInclude Include="Rendering\Renderable.h" />
     <ClInclude Include="Rendering\GLRenderer.h" />
     <ClInclude Include="GL\gl_core_4_5.h" />
@@ -248,7 +250,7 @@
     <None Include="Assets\Shaders\Fragment\alphamap.frag" />
     <None Include="Assets\Shaders\Fragment\buffer.frag" />
     <None Include="Assets\Shaders\Fragment\cartoonEffect.frag" />
-    <None Include="Assets\Shaders\Fragment\cubemap.frag" />
+    <None Include="Assets\Shaders\Fragment\reflection.frag" />
     <None Include="Assets\Shaders\Fragment\diffuseLight.frag" />
     <None Include="Assets\Shaders\Fragment\directionalLight.frag" />
     <None Include="Assets\Shaders\Fragment\discard.frag" />
@@ -258,7 +260,8 @@
     <None Include="Assets\Shaders\Fragment\multiLight.frag" />
     <None Include="Assets\Shaders\Fragment\multiTexture.frag" />
     <None Include="Assets\Shaders\Fragment\normal-map.frag" />
-    <None Include="Assets\Shaders\Vertex\cubemap.vert" />
+    <None Include="Assets\Shaders\Fragment\refraction.frag" />
+    <None Include="Assets\Shaders\Vertex\reflection.vert" />
     <None Include="Assets\Shaders\Vertex\normal-map.vert" />
     <None Include="Assets\Shaders\Fragment\pipeline.frag" />
     <None Include="Assets\Shaders\Fragment\shaderColor.frag" />
@@ -283,6 +286,7 @@
     <None Include="Assets\Shaders\Vertex\multiLight.vert" />
     <None Include="Assets\Shaders\Vertex\multiTexture.vert" />
     <None Include="Assets\Shaders\Vertex\pipeline.vert" />
+    <None Include="Assets\Shaders\Vertex\refraction.vert" />
     <None Include="Assets\Shaders\Vertex\shaderColor.vert" />
     <None Include="Assets\Shaders\Vertex\spotlight.vert" />
     <None Include="Assets\Shaders\Vertex\texture.vert" />
